--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+.users {
+  height: 250px;
+  margin-top: 20px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+
+  padding: 10px;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.repos {
+  height: 150px;
+  margin-top: 20px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  padding: 10px;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.users__image {
+  height: 100px;
+  width: 100px;
+  margin: 20px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.post__commentBox {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 10px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+
+.post__input {
+  flex: 1;
+  
+  padding: 10px;
+  border: 1px solid lightgray;
+  border-right: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post__button {
+  flex: 0;
+  border-right: none;
+  color: #6082a3;
+  background-color: transparent;
+  border: 1px solid lightgray;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  font-weight: bold;
 }
